WIP: making channel connection count service